[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todocli-python"
dynamic = ["version"]
description = 'A todo list app for the cli'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jarrydharris", email = "mail@jarrydharris.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jarrydharris/todocli-python#readme"
Issues = "https://github.com/jarrydharris/todocli-python/issues"
Source = "https://github.com/jarrydharris/todocli-python"

[tool.hatch.version]
path = "src/todocli_python/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/todocli_python tests}"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todocli_python"]

[tool.coverage.run]
source_pkgs = ["todocli_python", "tests"]
branch = true
parallel = true
omit = [
  "src/todocli_python/__about__.py",
]

[tool.coverage.paths]
todocli_python = ["src/todocli_python", "*/todocli-python/src/todocli_python"]
tests = ["tests", "*/todocli-python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
